# checkmate

./: .gitignore  Cargo.toml  flake.nix  schema.json  test.json
src/: command.rs  draw.rs  lib.rs  main.rs
