[package]
name = "checkmate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.0", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.0"
serde_dhall = "0.12.0"
tui = "0.19.0"
crossterm = "0.25"
openssh = { version = "0.9.9", features = [ "process-mux", "native-mux" ] }
tokio = "1.28.0"
serde_json = "1.0.96"
schemars = "0.8.12"
itertools = "0.10.5"
